--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">İletişim</a>
                 </li>
+                <li class="nav-item">
+                    <a href="login.html" class="nav-link">Öğrenci Girişi</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
