Logo boyutu düzeltildi ve gerçek ilerleme takip sistemi eklendi

--- a/dashboard.html
+++ b/dashboard.html
@@ -408,6 +408,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="demo-data.js"></script>
+    <script src="progress-system.js"></script>
     <script src="dashboard.js"></script>
 </body>
 </html> 
