--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a href="login.html" class="nav-link">Öğrenci Girişi</a>
                 </li>
+                <li class="nav-item">
+                    <a href="teacher-dashboard.html" class="nav-link">Öğretmen Paneli</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
