--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -21,16 +21,13 @@
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Ana Sayfa</a>
+                    <a href="#dashboard" class="nav-link active">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#dashboard" class="nav-link active">Öğretmen Paneli</a>
+                    <a href="#content" class="nav-link">İçerik Yönetimi</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#courses" class="nav-link">Derslerim</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#students" class="nav-link">Öğrencilerim</a>
+                    <a href="#students" class="nav-link">Öğrenciler</a>
                 </li>
                 <li class="nav-item">
                     <a href="#analytics" class="nav-link">Analitik</a>
@@ -69,21 +66,13 @@
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
                 </a>
-                <a href="#courses" class="sidebar-link" data-section="courses">
-                    <i class="fas fa-book"></i>
-                    <span>Derslerim</span>
-                </a>
                 <a href="#content" class="sidebar-link" data-section="content">
                     <i class="fas fa-upload"></i>
                     <span>İçerik Yönetimi</span>
                 </a>
                 <a href="#students" class="sidebar-link" data-section="students">
                     <i class="fas fa-users"></i>
-                    <span>Öğrencilerim</span>
-                </a>
-                <a href="#assignments" class="sidebar-link" data-section="assignments">
-                    <i class="fas fa-tasks"></i>
-                    <span>Ödevler</span>
+                    <span>Öğrenciler</span>
                 </a>
                 <a href="#analytics" class="sidebar-link" data-section="analytics">
                     <i class="fas fa-chart-bar"></i>
