--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="login.html" class="nav-link">Öğrenci Girişi</a>
                 </li>
                 <li class="nav-item">
-                    <a href="teacher-dashboard.html" class="nav-link">Öğretmen Paneli</a>
+                    <a href="teacher-login.html" class="nav-link">Öğretmen Paneli</a>
                 </li>
             </ul>
             <div class="hamburger">
