--- a/teacher-login.html
+++ b/teacher-login.html
@@ -11,47 +11,120 @@
     <link rel="icon" type="image/png" href="images/logonet.png">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <img src="images/logonet.png" alt="Nora Akademi Logo" class="logo-img">
+                <h2>Nora Akademi</h2>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Ana Sayfa</a>
+                </li>
+                <li class="nav-item">
+                    <a href="index.html#teachers" class="nav-link">Hocalarımız</a>
+                </li>
+                <li class="nav-item">
+                    <a href="index.html#courses" class="nav-link">Ders Paketleri</a>
+                </li>
+                <li class="nav-item">
+                    <a href="index.html#contact" class="nav-link">İletişim</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Auth Container -->
     <div class="auth-container">
-        <div class="auth-card">
+        <div class="auth-box">
             <div class="auth-header">
                 <img src="images/logonet.png" alt="Nora Akademi Logo" class="auth-logo">
                 <h2>Öğretmen Girişi</h2>
-                <p>Hesabınıza giriş yapın</p>
+                <p>Hesabınıza giriş yapın ve eğitim içeriklerinizi yönetin</p>
             </div>
 
+            <!-- Login Form -->
             <form id="teacherLoginForm" class="auth-form">
                 <div class="form-group">
-                    <div class="input-group">
-                        <i class="fas fa-envelope"></i>
-                        <input type="email" id="teacherEmail" placeholder="Email adresiniz" required>
-                    </div>
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="teacherEmail" placeholder="Email adresiniz" required>
                 </div>
-
                 <div class="form-group">
-                    <div class="input-group">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" id="teacherPassword" placeholder="Şifreniz" required>
-                        <button type="button" class="password-toggle" onclick="togglePassword('teacherPassword')">
-                            <i class="fas fa-eye"></i>
-                        </button>
-                    </div>
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="teacherPassword" placeholder="Şifreniz" required>
+                    <i class="fas fa-eye toggle-password"></i>
                 </div>
-
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-full">
-                        <span class="btn-text">Giriş Yap</span>
-                        <span class="btn-loading" style="display: none;">
-                            <i class="fas fa-spinner fa-spin"></i> Giriş yapılıyor...
-                        </span>
-                    </button>
+                <div class="form-options">
+                    <label class="checkbox-container">
+                        <input type="checkbox" id="rememberMe">
+                        <span class="checkmark"></span>
+                        Beni hatırla
+                    </label>
+                    <a href="#" class="forgot-password">Şifremi unuttum</a>
                 </div>
-
-                <div class="auth-footer">
-                    <a href="index.html" class="back-link">
-                        <i class="fas fa-arrow-left"></i> Ana Sayfaya Dön
-                    </a>
-                </div>
+                <button type="submit" class="btn btn-primary auth-btn">
+                    <span class="btn-text">Giriş Yap</span>
+                    <span class="btn-loading" style="display: none;">
+                        <i class="fas fa-spinner fa-spin"></i> Giriş yapılıyor...
+                    </span>
+                    <i class="fas fa-arrow-right"></i>
+                </button>
             </form>
+
+            <div class="auth-divider">
+                <span>veya</span>
+            </div>
+
+            <!-- Register Form -->
+            <form id="teacherRegisterForm" class="auth-form" style="display: none;">
+                <div class="form-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" id="teacherRegisterName" placeholder="Adınız Soyadınız" required>
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="teacherRegisterEmail" placeholder="Email adresiniz" required>
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-phone"></i>
+                    <input type="tel" id="teacherRegisterPhone" placeholder="Telefon numaranız" required>
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-graduation-cap"></i>
+                    <input type="text" id="teacherRegisterSubject" placeholder="Branşınız (örn: Matematik)" required>
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="teacherRegisterPassword" placeholder="Şifreniz" required>
+                    <i class="fas fa-eye toggle-password"></i>
+                </div>
+                <div class="form-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="teacherRegisterPasswordConfirm" placeholder="Şifrenizi tekrar girin" required>
+                    <i class="fas fa-eye toggle-password"></i>
+                </div>
+                <div class="form-options">
+                    <label class="checkbox-container">
+                        <input type="checkbox" id="agreeTerms" required>
+                        <span class="checkmark"></span>
+                        <a href="#" class="terms-link">Kullanım şartlarını</a> kabul ediyorum
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary auth-btn">
+                    <span>Kayıt Ol</span>
+                    <i class="fas fa-user-plus"></i>
+                </button>
+            </form>
+
+            <div class="auth-switch">
+                <p id="switchText">Hesabınız yok mu? <a href="#" id="switchBtn">Kayıt olun</a></p>
+            </div>
 
             <div class="demo-credentials">
                 <h4>Demo Giriş Bilgileri:</h4>
