--- a/teacher-login.html
+++ b/teacher-login.html
@@ -53,12 +53,12 @@
             <form id="teacherLoginForm" class="auth-form">
                 <div class="form-group">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" id="teacherEmail" placeholder="Email adresiniz" required>
+                    <input type="email" id="loginEmail" placeholder="Email adresiniz" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group password-field">
                     <i class="fas fa-lock"></i>
-                    <input type="password" id="teacherPassword" placeholder="Şifreniz" required>
-                    <i class="fas fa-eye toggle-password"></i>
+                    <input type="password" id="loginPassword" placeholder="Şifreniz" required>
+                    <i class="fas fa-eye password-toggle"></i>
                 </div>
                 <div class="form-options">
                     <label class="checkbox-container">
@@ -85,29 +85,21 @@
             <form id="teacherRegisterForm" class="auth-form" style="display: none;">
                 <div class="form-group">
                     <i class="fas fa-user"></i>
-                    <input type="text" id="teacherRegisterName" placeholder="Adınız Soyadınız" required>
+                    <input type="text" id="registerName" placeholder="Adınız Soyadınız" required>
                 </div>
                 <div class="form-group">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" id="teacherRegisterEmail" placeholder="Email adresiniz" required>
+                    <input type="email" id="registerEmail" placeholder="Email adresiniz" required>
                 </div>
-                <div class="form-group">
-                    <i class="fas fa-phone"></i>
-                    <input type="tel" id="teacherRegisterPhone" placeholder="Telefon numaranız" required>
-                </div>
-                <div class="form-group">
-                    <i class="fas fa-graduation-cap"></i>
-                    <input type="text" id="teacherRegisterSubject" placeholder="Branşınız (örn: Matematik)" required>
-                </div>
-                <div class="form-group">
+                <div class="form-group password-field">
                     <i class="fas fa-lock"></i>
-                    <input type="password" id="teacherRegisterPassword" placeholder="Şifreniz" required>
-                    <i class="fas fa-eye toggle-password"></i>
+                    <input type="password" id="registerPassword" placeholder="Şifreniz" required>
+                    <i class="fas fa-eye password-toggle"></i>
                 </div>
-                <div class="form-group">
+                <div class="form-group password-field">
                     <i class="fas fa-lock"></i>
-                    <input type="password" id="teacherRegisterPasswordConfirm" placeholder="Şifrenizi tekrar girin" required>
-                    <i class="fas fa-eye toggle-password"></i>
+                    <input type="password" id="registerConfirmPassword" placeholder="Şifrenizi tekrar girin" required>
+                    <i class="fas fa-eye password-toggle"></i>
                 </div>
                 <div class="form-options">
                     <label class="checkbox-container">
