--- a/teacher-login.html
+++ b/teacher-login.html
@@ -6,6 +6,25 @@
     <title>Nora Akademi - Öğretmen Girişi</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="auth.css">
+    <style>
+        .demo-credentials {
+            background: #f8f9fa;
+            border: 1px solid #dee2e6;
+            border-radius: 8px;
+            padding: 1rem;
+            margin-top: 1rem;
+            text-align: center;
+        }
+        
+        .demo-credentials p {
+            margin: 0.25rem 0;
+            font-size: 0.875rem;
+        }
+        
+        .demo-credentials strong {
+            color: #495057;
+        }
+    </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/png" href="images/logonet.png">
@@ -77,45 +96,13 @@
                 </button>
             </form>
 
-            <div class="auth-divider">
-                <span>veya</span>
-            </div>
-
-            <!-- Register Form -->
-            <form id="teacherRegisterForm" class="auth-form" style="display: none;">
-                <div class="form-group">
-                    <i class="fas fa-user"></i>
-                    <input type="text" id="registerName" placeholder="Adınız Soyadınız" required>
+            <div class="auth-info">
+                <p><i class="fas fa-info-circle"></i> Öğretmen hesapları sadece yönetici tarafından oluşturulur.</p>
+                <div class="demo-credentials">
+                    <p><strong>Demo Hesap:</strong></p>
+                    <p>Email: aysebuz@gmail.com</p>
+                    <p>Şifre: 123456</p>
                 </div>
-                <div class="form-group">
-                    <i class="fas fa-envelope"></i>
-                    <input type="email" id="registerEmail" placeholder="Email adresiniz" required>
-                </div>
-                <div class="form-group password-field">
-                    <i class="fas fa-lock"></i>
-                    <input type="password" id="registerPassword" placeholder="Şifreniz" required>
-                    <i class="fas fa-eye password-toggle"></i>
-                </div>
-                <div class="form-group password-field">
-                    <i class="fas fa-lock"></i>
-                    <input type="password" id="registerConfirmPassword" placeholder="Şifrenizi tekrar girin" required>
-                    <i class="fas fa-eye password-toggle"></i>
-                </div>
-                <div class="form-options">
-                    <label class="checkbox-container">
-                        <input type="checkbox" id="agreeTerms" required>
-                        <span class="checkmark"></span>
-                        <a href="#" class="terms-link">Kullanım şartlarını</a> kabul ediyorum
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-primary auth-btn">
-                    <span>Kayıt Ol</span>
-                    <i class="fas fa-user-plus"></i>
-                </button>
-            </form>
-
-            <div class="auth-switch">
-                <p id="switchText">Hesabınız yok mu? <a href="#" id="switchBtn">Kayıt olun</a></p>
             </div>
 
 
