Firebase Analytics hatası düzeltildi ve demo login eklendi

--- a/login.html
+++ b/login.html
@@ -121,6 +121,13 @@
             <div class="auth-switch">
                 <p id="switchText">Hesabınız yok mu? <a href="#" id="switchBtn">Kayıt olun</a></p>
             </div>
+            
+            <!-- Demo Credentials -->
+            <div class="demo-credentials">
+                <h4>Demo Hesap Bilgileri:</h4>
+                <p><strong>Email:</strong> demo@student.com</p>
+                <p><strong>Şifre:</strong> 123456</p>
+            </div>
         </div>
     </div>
 
@@ -128,6 +135,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics-compat.js"></script>
     
     <!-- Firebase Config -->
     <script src="firebase-config.js"></script>
