--- a/dashboard.html
+++ b/dashboard.html
@@ -410,6 +410,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="demo-data.js"></script>
     <script src="progress-system.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics-compat.js"></script>
+    
+    <!-- Firebase Config -->
+    <script src="firebase-config.js"></script>
+    
     <script src="dashboard.js"></script>
 </body>
 </html> 
