--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
                     <div class="teacher-info">
                         <h3>Ayşe Hoca</h3>
                         <p class="teacher-title">Matematik Öğretmeni</p>
-                        <p class="teacher-description">Ortaokul matematik müfredatında uzman, öğrenci odaklı eğitim yaklaşımı ile matematik öğrenmeyi kolaylaştırıyor.</p>
+                        <p class="teacher-description">LGS ve Ortaokul matematik konularında uzman, temel kavramlar ve problem çözme tekniklerinde deneyimli, öğrenci odaklı eğitim yaklaşımı ile matematik öğrenmeyi kolaylaştırıyor.</p>
                         <div class="teacher-subjects">
-                            <span>Sayılar</span>
-                            <span>Kesirler</span>
-                            <span>Yüzde</span>
-                            <span>Geometri</span>
+                            <span>LGS</span>
+                            <span>Ortaokul Matematik</span>
+                            <span>Temel Kavramlar</span>
+                            <span>Problem Çözme</span>
+                            
                         </div>
                     </div>
                 </div>
@@ -222,7 +223,7 @@
                             <li><i class="fas fa-check"></i> Email Desteği</li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-primary">Paketi Seç</a>
+                    <a href="#contact" class="btn btn-primary">Paketi Seç</a>
                 </div>
 
                 <div class="course-card featured" data-aos="fade-up" data-aos-delay="200">
@@ -240,7 +241,7 @@
                             <li><i class="fas fa-check"></i> 7/24 Destek</li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-primary">Paketi Seç</a>
+                    <a href="#contact" class="btn btn-primary">Paketi Seç</a>
                 </div>
 
                 <div class="course-card" data-aos="fade-up" data-aos-delay="300">
@@ -257,7 +258,7 @@
                             <li><i class="fas fa-check"></i> Sertifika</li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-primary">Paketi Seç</a>
+                    <a href="#contact" class="btn btn-primary">Paketi Seç</a>
                 </div>
             </div>
         </div>
