--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                             <span>Ortaokul Matematik</span>
                             <span>Temel Kavramlar</span>
                             <span>Problem Çözme</span>
+                            <span>TYT/AYT</span>
                             
                         </div>
                     </div>
@@ -159,6 +160,7 @@
                             <span>Cebir</span>
                             <span>TYT/AYT</span>
                             <span>Problem Çözme</span>
+                            <span>LGS</span>
                         </div>
                     </div>
                 </div>
