--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="teacher-info">
                         <h3>Ayşe Hoca</h3>
                         <p class="teacher-title">Matematik Öğretmeni</p>
-                        <p class="teacher-description">LGS ve Ortaokul matematik konularında uzman, temel kavramlar ve problem çözme tekniklerinde deneyimli, öğrenci odaklı eğitim yaklaşımı ile matematik öğrenmeyi kolaylaştırıyor.</p>
+                        <p class="teacher-description">LGS, TYT ve AYT matematik müfredatına hakim; temel kavramlar ve problem çözme tekniklerinde deneyimli, öğrenme sürecini öğrenci merkezli bir yaklaşımla destekleyerek kalıcı matematiksel anlayış geliştirir</p>
                         <div class="teacher-subjects">
                             <span>LGS</span>
                             <span>Ortaokul Matematik</span>
