--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="teacher-info">
                         <h3>Ecem Hoca</h3>
                         <p class="teacher-title">Matematik Uzmanı</p>
-                        <p class="teacher-description">Lise matematik konularında uzmanlaşmış, öğrencilerin matematik korkusunu yenmesini sağlayan deneyimli eğitmen.</p>
+                        <p class="teacher-description">Lise VE Ortaokul matematik konularında uzmanlaşmış, öğrencilerin matematik korkusunu yenmesini sağlayan deneyimli eğitmen.</p>
                         <div class="teacher-subjects">
                             <span>Analiz</span>
                             <span>Cebir</span>
